--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+
 * {
-    font-family: helvetica, trebuchet, sans-serif;
+    box-sizing: border-box;
 }
     
 img.user_avatar {
@@ -7,4 +8,34 @@ img.user_avatar {
     height: 40px;
     object-fit: cover;
     border-radius: 50%;
+}
+body {
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Amatic SC', cursive;
+    background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+}
+h1 {
+    font-size: 80px;
+    color: white;
+}
+h2 {
+    color: white;
+}
+input {
+    padding: 2%;
+    text-align: center;
+    border-radius: 10% 5% 10% 5%;
+}
+button {
+    margin: 2%;
+    padding: 1%;
+    border: none;
+ 
+  text-align: center;
+ border-radius: 10% 5% 10% 5%;
+ background-color: #d53369;  
+ color: #daae51; 
 }
