--- a/style.css
+++ b/style.css
@@ -11,17 +11,21 @@ img.user_avatar {
 }
 body {
     margin-top: 10%;
+    font-family: 'Amatic SC', cursive;
+    background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+}
+
+.info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Amatic SC', cursive;
-    background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
 }
 h1 {
     font-size: 80px;
     color: white;
 }
 h2 {
+    font-size: 70px;
     color: white;
 }
 input {
@@ -33,9 +37,22 @@ button {
     margin: 2%;
     padding: 1%;
     border: none;
- 
   text-align: center;
  border-radius: 10% 5% 10% 5%;
  background-color: #d53369;  
  color: #daae51; 
+}
+
+li {
+    display: inline-block;
+    margin: 20px;
+}
+
+a {
+    font-size: 30px;
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
 }
